added monitor setup in hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,6 +16,10 @@ exec-once = hyprpolkitagent
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
+# Monitors / Notebook
+monitor=eDP-1, highres, 0x0, 1
+monitor=HDMI-A-1, preferred, 0x0, 1, mirror, eDP-1
+
 general {
     gaps_in = 0
     gaps_out = 5, 10, 10, 10
@@ -118,6 +122,7 @@ device {
 
 $mainMod = SUPER
 
+bind = $mainMod, L, exec, hyprlock
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
