--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@ $bar = waybar
 $menu = rofi -show drun
 $notification = mako
 $screenshot = foamshot --path ~/Images/Screenshots/
+$lockscreen = hyprlock
 
 # Autostart
 exec-once = clipcatd
@@ -119,7 +120,7 @@ device {
 
 $mainMod = SUPER
 
-bind = $mainMod, L, exec, hyprlock
+bind = $mainMod, L, exec, $lockscreen
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod, M, exit,
