fixed a bug in the mako configuration

--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,4 +1,3 @@
-default-action=hyprctl dispatch focuswindow "app_name"
 font="FiraCode 8"
 background-color=#1e1e2e
 text-color=#585b70
@@ -7,3 +6,4 @@ border-radius=10
 padding=10,10,10,10
 group-by=app-name
 progress-color=over #89b4fa
+default-timeout=10000
