added the rofi theme

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -2,7 +2,7 @@
 $terminal = kitty
 $fileManager = $terminal yazi
 $bar = waybar
-$menu = rofi -show drun
+$menu = rofi -show drun -theme ~/.config/rofi/themes/drun
 $notification = mako
 $screenshot = foamshot --path ~/Images/Screenshots/
 $lockscreen = hyprlock
