--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,88 +1,9 @@
-# Apps
-$terminal = kitty
-$fileManager = $terminal yazi
-$bar = waybar
-$menu = rofi -show drun -theme ~/.config/rofi/themes/drun
-$notification = mako
-$screenshot = foamshot --path ~/Images/Screenshots/
-$lockscreen = hyprlock
-$clipboardMenu = clipcat-menu
-
-# Diemons
-$clipboardDaemon = clipcatd
-
-# Autostart
-exec-once = $clipboardDaemon
-exec-once = $bar
-exec-once = $notification
-exec-once = hyprpolkitagent
- 
-# Environments
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-
-# Monitors / Notebook
-monitor=eDP-1, highres, 0x0, 1
-monitor=HDMI-A-1, preferred, 0x0, 1, mirror, eDP-1
-
 general {
     gaps_in = 5
     gaps_out = 5, 10, 10, 10
     border_size = 0
     allow_tearing = false
     layout = dwindle
-}
-
-decoration {
-    rounding = 10
-    rounding_power = 2
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-        enabled = false
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
-
-    blur {
-        enabled = false
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
-    }
-}
-
-animations {
-    enabled = true
-    
-    #        NAME,           X0,   Y0,   X1,   Y1
-    bezier = easeOutQuint,   0.23, 1,    0.32, 1
-    bezier = easeInOutCubic, 0.65, 0.05, 0.36, 1
-    bezier = linear,         0,    0,    1,    1
-    bezier = almostLinear,   0.5,  0.5,  0.75, 1
-    bezier = quick,          0.15, 0,    0.1,  1
-
-    #           NAME,          ONOFF, SPEED, CURVE,        [STYLE]
-    animation = global,        1,     10,    default
-    animation = border,        1,     5.39,  easeOutQuint
-    animation = windows,       1,     4.79,  easeOutQuint
-    animation = windowsIn,     1,     4.1,   easeOutQuint, popin 87%
-    animation = windowsOut,    1,     1.49,  linear,       popin 87%
-    animation = fadeIn,        1,     1.73,  almostLinear
-    animation = fadeOut,       1,     1.46,  almostLinear
-    animation = fade,          1,     3.03,  quick
-    animation = layers,        1,     3.81,  easeOutQuint
-    animation = layersIn,      1,     4,     easeOutQuint, fade
-    animation = layersOut,     1,     1.5,   linear,       fade
-    animation = fadeLayersIn,  1,     1.79,  almostLinear
-    animation = fadeLayersOut, 1,     1.39,  almostLinear
-    animation = workspaces,    1,     1.94,  almostLinear, fade
-    animation = workspacesIn,  1,     1.21,  almostLinear, fade
-    animation = workspacesOut, 1,     1.94,  almostLinear, fade
-    animation = zoomFactor,    1,     7,     quick
 }
 
 dwindle {
@@ -118,111 +39,11 @@ device {
     sensitivity = -0.5
 }
 
-# Keybinds
-$mainMod = SUPER
-
-## Apps
-bind =   $mainMod,       T,                     exec,            $terminal         # Terminal
-bind =   $mainMod,       L,                     exec,            $lockscreen       # Lockscreen
-bind =   $mainMod,       E,                     exec,            $fileManager      # File Manager
-bind =   $mainMod,       R,                     exec,            $menu             # Run Menu
-bind =   ,               PRINT,                 exec,            $screenshot       # Screanshot
-bind =   $mainMod,       V,                     exec,            $clipboardMenu    # Clipboard
-bind =   $mainMod SHIFT, V,                     exec,            clipcatctl clear  # Clipboard clear
-
-## Window
-bind =   $mainMod,       escape,                killactive, 
-bind =   ,               F11,                   fullscreen
-
-### Window / Focus
-bind =   $mainMod,       left,                  movefocus,       l
-bind =   $mainMod,       right,                 movefocus,       r
-bind =   $mainMod,       up,                    movefocus,       u
-bind =   $mainMod,       down,                  movefocus,       d
-
-### Workspace / Switching
-bind =   $mainMod,       1,                     workspace,       1
-bind =   $mainMod,       2,                     workspace,       2
-bind =   $mainMod,       3,                     workspace,       3
-bind =   $mainMod,       4,                     workspace,       4
-bind =   $mainMod,       5,                     workspace,       5
-bind =   $mainMod,       6,                     workspace,       6
-bind =   $mainMod,       7,                     workspace,       7
-bind =   $mainMod,       8,                     workspace,       8
-bind =   $mainMod,       9,                     workspace,       9
-bind =   $mainMod,       0,                     workspace,       10
-
-### Window / Movement
-bind =   $mainMod SHIFT, 1,                     movetoworkspace, 1
-bind =   $mainMod SHIFT, 2,                     movetoworkspace, 2
-bind =   $mainMod SHIFT, 3,                     movetoworkspace, 3
-bind =   $mainMod SHIFT, 4,                     movetoworkspace, 4
-bind =   $mainMod SHIFT, 5,                     movetoworkspace, 5
-bind =   $mainMod SHIFT, 6,                     movetoworkspace, 6
-bind =   $mainMod SHIFT, 7,                     movetoworkspace, 7
-bind =   $mainMod SHIFT, 8,                     movetoworkspace, 8
-bind =   $mainMod SHIFT, 9,                     movetoworkspace, 9
-bind =   $mainMod SHIFT, 0,                     movetoworkspace, 10
-
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,               XF86AudioRaiseVolume,  exec,            wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,               XF86AudioLowerVolume,  exec,            wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,               XF86AudioMute,         exec,            wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,               XF86AudioMicMute,      exec,            wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,               XF86MonBrightnessUp,   exec,            brightnessctl -e4 -n2 set 5%+
-bindel = ,               XF86MonBrightnessDown, exec,            brightnessctl -e4 -n2 set 5%-
-
-# Requires playerctl
-bindl = ,                XF86AudioNext,         exec,            playerctl next
-bindl = ,                XF86AudioPause,        exec,            playerctl play-pause
-bindl = ,                XF86AudioPlay,         exec,            playerctl play-pause
-bindl = ,                XF86AudioPrev,         exec,            playerctl previous
-
-
-# Window rules
-
-windowrule {
-    name = suppress-maximize-events
-    match:class = .*
-
-    suppress_event = maximize
-}
-
-windowrule {
-    name = fix-xwayland-drags
-    match:class = ^$
-    match:title = ^$
-    match:xwayland = true
-    match:float = true
-    match:fullscreen = false
-    match:pin = false
-
-    no_focus = true
-}
-
-windowrule {
-    name = move-hyprland-run
-
-    match:class = hyprland-run
-
-    move = 20 monitor_h-120
-    float = yes
-}
-
-windowrule {
-    name = termfilechooser
-    
-    match {
-        initial_title = termfilechooser
-    }
-
-    animation = windows, 1, 10, myepiccurve, slide
-
-    float = on
-    size = (monitor_w*0.5) (monitor_h*0.5)
-    stay_focused = on
-    center = on
-
-    border_color = 0xffffff
-    border_size = 1
-}
+source = ~/.config/hypr/hyprland/applications.conf
+source = ~/.config/hypr/hyprland/autostart.conf
+source = ~/.config/hypr/hyprland/environments.conf
+source = ~/.config/hypr/hyprland/monitors.conf
+source = ~/.config/hypr/hyprland/keybinds.conf
+source = ~/.config/hypr/hyprland/windowrules.conf
+source = ~/.config/hypr/hyprland/animations.conf
+source = ~/.config/hypr/hyprland/decorations.conf
