Yazi was replaced by Dolphin

--- a/.config/hypr/hyprland/applications.conf
+++ b/.config/hypr/hyprland/applications.conf
@@ -1,12 +1,14 @@
 # Apps
 $terminal = kitty
-$fileManager = $terminal yazi
-$bar = waybar
+$fileManager = dolphin ~/
 $menu = rofi -show drun -theme ~/.config/rofi/themes/drun
-$notification = mako
 $screenshot = foamshot --path ~/Images/Screenshots/
 $lockscreen = hyprlock
-$clipboardMenu = clipcat-menu
+$clipboardMenu = rofi -show clipboard -theme clipboard
 
 # Diemons
-$clipboardDaemon = clipcatd
+$barDaemon = waybar
+$notificationDaemon = mako
+$clipboardTextDaemon = wl-paste -t text -w cliphist store
+$clipboardImageDaemon = wl-paste -t image -w cliphist store
+$wallpaperDaemon = swww-daemon
