--- a/.config/hypr/hyprland/autostart.conf
+++ b/.config/hypr/hyprland/autostart.conf
@@ -1,4 +1,5 @@
-exec-once = $clipboardDaemon
-exec-once = $bar
-exec-once = $notification
-exec-once = hyprpolkitagent
+exec-once = $clipboardTextDaemon
+exec-once = $clipboardImageDaemon
+exec-once = $barDaemon
+exec-once = $notificationDaemon
+exec-once = $wallpaperDaemon
