--- a/.config/hypr/hyprland/windowrules.conf
+++ b/.config/hypr/hyprland/windowrules.conf
@@ -27,19 +27,26 @@ windowrule {
 }
 
 windowrule {
-    name = termfilechooser
+    name = file_chooser
     
     match {
-        initial_title = termfilechooser
+        initial_class = org.freedesktop.impl.portal.desktop.kde
     }
 
     animation = windows, 1, 10, myepiccurve, slide
 
     float = on
     size = (monitor_w*0.5) (monitor_h*0.5)
-    stay_focused = on
     center = on
+}
 
-    border_color = 0xffffff
-    border_size = 1
+windowrule {
+    name = blender
+    match {
+        initial_class = blender
+        float = true
+    }
+
+    size = (monitor_w*0.5) (monitor_h*0.5)
+    center = true
 }
